re PR rtl-optimization/28970 (wrong code for simple loop test case)

PR rtl-optimization/28970
	* loop.c (loop_giv_reduce_benefit): Take the max of the addition
	cost on all the increments of the BIV.

From-SVN: r118379